Fix: Resolve Discord webhook error in GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,7 @@ jobs:
       uses: sarisia/actions-status-discord@v1
       with:
         webhook: ${{ secrets.DISCORD_WEBHOOK }}
+        ack_no_webhook: true
         status: ${{ job.status }}
         title: "Deployment Status"
         description: |
