Fix: GitHub Actions .env generation format and missing variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,22 @@ jobs:
           sudo -u kraftbot git pull origin main
           
           # Generate secure .env file with proper ownership
-          sudo -u kraftbot tee .env > /dev/null << EOF
-          DISCORD_TOKEN_CENTRAL_BANK_BOT=${{ secrets.DISCORD_TOKEN_CENTRAL_BANK_BOT }}
-          DISCORD_TOKEN_COMMUNITY_BOT=${{ secrets.DISCORD_TOKEN_COMMUNITY_BOT }}
-          DISCORD_TOKEN_TITLE_BOT=${{ secrets.DISCORD_TOKEN_TITLE_BOT }}
-          DISCORD_TOKEN_STOCK_MARKET_BOT=${{ secrets.DISCORD_TOKEN_STOCK_MARKET_BOT }}
-          ADMIN_USER_IDS=${{ secrets.ADMIN_USER_IDS }}
-          ANTHROPIC_API_KEY=${{ secrets.CLAUDE_API_KEY }}
-          EOF
+          sudo -u kraftbot tee .env > /dev/null << 'ENVEOF'
+# Discord Bot Tokens
+DISCORD_TOKEN_CENTRAL_BANK_BOT=${{ secrets.DISCORD_TOKEN_CENTRAL_BANK_BOT }}
+DISCORD_TOKEN_COMMUNITY_BOT=${{ secrets.DISCORD_TOKEN_COMMUNITY_BOT }}
+DISCORD_TOKEN_TITLE_BOT=${{ secrets.DISCORD_TOKEN_TITLE_BOT }}
+DISCORD_TOKEN_STOCK_MARKET_BOT=${{ secrets.DISCORD_TOKEN_STOCK_MARKET_BOT }}
+
+# Anthropic API
+ANTHROPIC_API_KEY=${{ secrets.CLAUDE_API_KEY }}
+
+# Firebase
+FIREBASE_PROJECT_ID=new-kraft-bot
+
+# Admin Configuration
+ADMIN_USER_IDS=${{ secrets.ADMIN_USER_IDS }}
+ENVEOF
           
           # Set secure permissions
           sudo chmod 600 .env
